# nebula-copilot

./: .dockerignore  .gitignore  CLAUDE.md  CLAUDE_DEV.md  CLAUDE_DOCS.md  CLAUDE_QA.md  Dockerfile  README.md  agent-harness.md  docker-compose.yml  feature_list.json  init.sh  progress.txt  pyproject.toml  run-agent.sh  start-dev.sh  start-qa.sh  task.json  write_files.py
.github/: copilot-instructions.md  每次执行前先看这篇rules.md
data/: agent_runs.json  agent_runs_e2e_real_20260330_173737.json  agent_runs_e2e_real_20260330_174056.json  agent_runs_feishu_diverse_test.json  agent_runs_feishu_format_test.json  agent_runs_feishu_test.json  agent_runs_feishu_test_dynamic.json  agent_runs_monitor_test.json  agent_runs_tmp.json  mock_trace.json  notify_dedupe.json  notify_dedupe_e2e_real_20260330_173737.json  notify_dedupe_e2e_real_20260330_174056.json  notify_dedupe_feishu_diverse_test.json  notify_dedupe_feishu_format_test.json  notify_dedupe_feishu_test.json  notify_dedupe_feishu_test_dynamic.json  notify_dedupe_monitor_test.json  run_guard.json
docs/: DEPLOYMENT.md  ES_DATA_SCHEMA.md  ES_IMPORT_SYNC_API.md  IMPORT_SYNC_BEHAVIOR.md  MCP_SETUP.md  MONITOR_INTEGRATION_GUIDE.md  OPERATIONS.md  PROJECT_PLAN.md  WEB_DASHBOARD_FEATURES.md
message_bus/: bug_reports.md  completed.md  ready_for_test.md
nebula_copilot/: __init__.py  analyzer.py  cli.py  code_whitelist.py  config.py  errors.py  es_client.py  es_importer.py  es_sync.py  evaluation.py  history_vector.py  knowledge_base.py  (+8 more)
nebula_copilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+55 files in other folders)
