[project]
name = "nebula-copilot"
version = "0.1.0"
description = "Nebula-Copilot MVP CLI for trace bottleneck diagnosis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.13.0",
  "rich>=13.9.0",
  "pydantic>=2.9.0",
  "elasticsearch>=8.14.0,<9.0.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "flask>=3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
nebula-cli = "nebula_copilot.cli:app"
nebula-web = "nebula_copilot.web:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nebula_copilot*"]
